--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Flight Tracker</string>
+    <string name="enter_flight_number">Enter flight number (e.g., BA123)</string>
+    <string name="track_flight">Track Flight</string>
+    <string name="refresh">Refresh</string>
 </resources>
